grammars.output
Grammar

    0 $accept: program $end

    1 program: decl_list

    2 decl_list: decl
    3          | decl decl_list

    4 decl: name TOKEN_COLON type TOKEN_SEMI
    5     | name TOKEN_COLON type TOKEN_ASSIGN expr TOKEN_SEMI
    6     | name TOKEN_COLON type TOKEN_ASSIGN stmt_suite

    7 name: TOKEN_NAME

    8 type: TOKEN_BOOL
    9     | TOKEN_INTEGER
   10     | TOKEN_TYPE_CHAR
   11     | TOKEN_TYPE_STRING
   12     | TOKEN_ARRAY TOKEN_LSQB TOKEN_RSQB type
   13     | TOKEN_VOID
   14     | TOKEN_FUNC type TOKEN_LPAREN funcarg TOKEN_RPAREN

   15 funcarg: %empty
   16        | name TOKEN_COLON type
   17        | name TOKEN_COLON type TOKEN_COMMA funcarg

   18 stmt_suite: TOKEN_LBRACE simple_stmt TOKEN_RBRACE

   19 simple_stmt: small_stmt
   20            | small_stmt simple_stmt

   21 small_stmt: TOKEN_RETURN expr TOKEN_SEMI
   22           | TOKEN_PRINT expr TOKEN_COMMA expr TOKEN_SEMI
   23           | TOKEN_IF TOKEN_LPAREN expr TOKEN_RPAREN stmt_suite
   24           | TOKEN_IF TOKEN_LPAREN expr TOKEN_RPAREN stmt_suite TOKEN_ELSE stmt_suite
   25           | TOKEN_FOR TOKEN_LPAREN expr TOKEN_SEMI expr TOKEN_SEMI expr TOKEN_RPAREN stmt_suite
   26           | decl
   27           | expr TOKEN_SEMI

   28 expr: expr_or
   29     | expr_trailer TOKEN_ASSIGN expr_or

   30 expr_or: expr_and
   31        | expr_or TOKEN_OR expr_and

   32 expr_and: expr_comp
   33         | expr_and TOKEN_AND expr_comp

   34 expr_comp: expr_arith
   35          | expr_comp TOKEN_LESS expr_arith
   36          | expr_comp TOKEN_LESSEQU expr_arith
   37          | expr_comp TOKEN_GREATEREQU expr_arith
   38          | expr_comp TOKEN_GREATER expr_arith
   39          | expr_comp TOKEN_EQUAL expr_arith
   40          | expr_comp TOKEN_NOTEQUAL expr_arith

   41 expr_arith: expr_factor
   42           | expr_arith TOKEN_ADD expr_factor
   43           | expr_arith TOKEN_MINUS expr_factor

   44 expr_factor: expr_expon
   45            | expr_factor TOKEN_MUL expr_expon
   46            | expr_factor TOKEN_DIV expr_expon
   47            | expr_factor TOKEN_MOD expr_expon

   48 expr_expon: expr_unary
   49           | expr_expon TOKEN_EXPON expr_unary

   50 expr_unary: expr_incdec
   51           | TOKEN_BANG expr_incdec
   52           | TOKEN_MINUS expr_incdec

   53 expr_incdec: expr_trailer
   54            | TOKEN_INC expr_trailer
   55            | TOKEN_DEC expr_trailer

   56 expr_trailer: expr_atom
   57             | TOKEN_LPAREN expr TOKEN_RPAREN
   58             | expr_name TOKEN_LSQB expr_number TOKEN_RSQB
   59             | expr_name TOKEN_LPAREN expr_callarg TOKEN_RPAREN

   60 expr_callarg: %empty
   61             | expr
   62             | expr TOKEN_COMMA expr_callarg

   63 expr_atom: expr_name
   64          | expr_number
   65          | TOKEN_STRING
   66          | TOKEN_CHAR
   67          | TOKEN_BOOL_TRUE
   68          | TOKEN_BOOL_FALSE

   69 expr_name: TOKEN_NAME

   70 expr_number: TOKEN_NUMBER


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    TOKEN_IF (258) 23 24
    TOKEN_ELSE (259) 24
    TOKEN_FOR (260) 25
    TOKEN_RETURN (261) 21
    TOKEN_PRINT (262) 22
    TOKEN_BOOL (263) 8
    TOKEN_INTEGER (264) 9
    TOKEN_TYPE_CHAR (265) 10
    TOKEN_TYPE_STRING (266) 11
    TOKEN_ARRAY (267) 12
    TOKEN_VOID (268) 13
    TOKEN_FUNC (269) 14
    TOKEN_BOOL_TRUE (270) 67
    TOKEN_BOOL_FALSE (271) 68
    TOKEN_COLON (272) 4 5 6 16 17
    TOKEN_SEMI (273) 4 5 21 22 25 27
    TOKEN_LPAREN (274) 14 23 24 25 57 59
    TOKEN_RPAREN (275) 14 23 24 25 57 59
    TOKEN_LBRACE (276) 18
    TOKEN_RBRACE (277) 18
    TOKEN_LSQB (278) 12 58
    TOKEN_RSQB (279) 12 58
    TOKEN_COMMA (280) 17 22 62
    TOKEN_ASSIGN (281) 5 6 29
    TOKEN_OR (282) 31
    TOKEN_AND (283) 33
    TOKEN_LESS (284) 35
    TOKEN_LESSEQU (285) 36
    TOKEN_GREATER (286) 38
    TOKEN_GREATEREQU (287) 37
    TOKEN_EQUAL (288) 39
    TOKEN_NOTEQUAL (289) 40
    TOKEN_ADD (290) 42
    TOKEN_MINUS (291) 43 52
    TOKEN_MUL (292) 45
    TOKEN_DIV (293) 46
    TOKEN_MOD (294) 47
    TOKEN_EXPON (295) 49
    TOKEN_BANG (296) 51
    TOKEN_INC (297) 54
    TOKEN_DEC (298) 55
    TOKEN_NUMBER (299) 70
    TOKEN_STRING (300) 65
    TOKEN_NAME (301) 7 69
    TOKEN_CHAR (302) 66


Nonterminals, with rules where they appear

    $accept (48)
        on left: 0
    program <decl> (49)
        on left: 1
        on right: 0
    decl_list <decl> (50)
        on left: 2 3
        on right: 1 3
    decl <decl> (51)
        on left: 4 5 6
        on right: 2 3 26
    name <name> (52)
        on left: 7
        on right: 4 5 6 16 17
    type <type> (53)
        on left: 8 9 10 11 12 13 14
        on right: 4 5 6 12 14 16 17
    funcarg <param_list> (54)
        on left: 15 16 17
        on right: 14 17
    stmt_suite <stmt> (55)
        on left: 18
        on right: 6 23 24 25
    simple_stmt <stmt> (56)
        on left: 19 20
        on right: 18 20
    small_stmt <stmt> (57)
        on left: 21 22 23 24 25 26 27
        on right: 19 20
    expr <expr> (58)
        on left: 28 29
        on right: 5 21 22 23 24 25 27 57 61 62
    expr_or <expr> (59)
        on left: 30 31
        on right: 28 29 31
    expr_and <expr> (60)
        on left: 32 33
        on right: 30 31 33
    expr_comp <expr> (61)
        on left: 34 35 36 37 38 39 40
        on right: 32 33 35 36 37 38 39 40
    expr_arith <expr> (62)
        on left: 41 42 43
        on right: 34 35 36 37 38 39 40 42 43
    expr_factor <expr> (63)
        on left: 44 45 46 47
        on right: 41 42 43 45 46 47
    expr_expon <expr> (64)
        on left: 48 49
        on right: 44 45 46 47 49
    expr_unary <expr> (65)
        on left: 50 51 52
        on right: 48 49
    expr_incdec <expr> (66)
        on left: 53 54 55
        on right: 50 51 52
    expr_trailer <expr> (67)
        on left: 56 57 58 59
        on right: 29 53 54 55
    expr_callarg <expr> (68)
        on left: 60 61 62
        on right: 59 62
    expr_atom <expr> (69)
        on left: 63 64 65 66 67 68
        on right: 56
    expr_name <expr> (70)
        on left: 69
        on right: 58 59 63
    expr_number <expr> (71)
        on left: 70
        on right: 58 64


State 0

    0 $accept: . program $end
    1 program: . decl_list
    2 decl_list: . decl
    3          | . decl decl_list
    4 decl: . name TOKEN_COLON type TOKEN_SEMI
    5     | . name TOKEN_COLON type TOKEN_ASSIGN expr TOKEN_SEMI
    6     | . name TOKEN_COLON type TOKEN_ASSIGN stmt_suite
    7 name: . TOKEN_NAME

    TOKEN_NAME  shift, and go to state 1

    program    go to state 2
    decl_list  go to state 3
    decl       go to state 4
    name       go to state 5


State 1

    7 name: TOKEN_NAME .

    $default  reduce using rule 7 (name)


State 2

    0 $accept: program . $end

    $end  shift, and go to state 6


State 3

    1 program: decl_list .

    $default  reduce using rule 1 (program)


State 4

    2 decl_list: . decl
    2          | decl .  [$end]
    3          | . decl decl_list
    3          | decl . decl_list
    4 decl: . name TOKEN_COLON type TOKEN_SEMI
    5     | . name TOKEN_COLON type TOKEN_ASSIGN expr TOKEN_SEMI
    6     | . name TOKEN_COLON type TOKEN_ASSIGN stmt_suite
    7 name: . TOKEN_NAME

    TOKEN_NAME  shift, and go to state 1

    $default  reduce using rule 2 (decl_list)

    decl_list  go to state 7
    decl       go to state 4
    name       go to state 5


State 5

    4 decl: name . TOKEN_COLON type TOKEN_SEMI
    5     | name . TOKEN_COLON type TOKEN_ASSIGN expr TOKEN_SEMI
    6     | name . TOKEN_COLON type TOKEN_ASSIGN stmt_suite

    TOKEN_COLON  shift, and go to state 8


State 6

    0 $accept: program $end .

    $default  accept


State 7

    3 decl_list: decl decl_list .

    $default  reduce using rule 3 (decl_list)


State 8

    4 decl: name TOKEN_COLON . type TOKEN_SEMI
    5     | name TOKEN_COLON . type TOKEN_ASSIGN expr TOKEN_SEMI
    6     | name TOKEN_COLON . type TOKEN_ASSIGN stmt_suite
    8 type: . TOKEN_BOOL
    9     | . TOKEN_INTEGER
   10     | . TOKEN_TYPE_CHAR
   11     | . TOKEN_TYPE_STRING
   12     | . TOKEN_ARRAY TOKEN_LSQB TOKEN_RSQB type
   13     | . TOKEN_VOID
   14     | . TOKEN_FUNC type TOKEN_LPAREN funcarg TOKEN_RPAREN

    TOKEN_BOOL         shift, and go to state 9
    TOKEN_INTEGER      shift, and go to state 10
    TOKEN_TYPE_CHAR    shift, and go to state 11
    TOKEN_TYPE_STRING  shift, and go to state 12
    TOKEN_ARRAY        shift, and go to state 13
    TOKEN_VOID         shift, and go to state 14
    TOKEN_FUNC         shift, and go to state 15

    type  go to state 16


State 9

    8 type: TOKEN_BOOL .

    $default  reduce using rule 8 (type)


State 10

    9 type: TOKEN_INTEGER .

    $default  reduce using rule 9 (type)


State 11

   10 type: TOKEN_TYPE_CHAR .

    $default  reduce using rule 10 (type)


State 12

   11 type: TOKEN_TYPE_STRING .

    $default  reduce using rule 11 (type)


State 13

   12 type: TOKEN_ARRAY . TOKEN_LSQB TOKEN_RSQB type

    TOKEN_LSQB  shift, and go to state 17


State 14

   13 type: TOKEN_VOID .

    $default  reduce using rule 13 (type)


State 15

    8 type: . TOKEN_BOOL
    9     | . TOKEN_INTEGER
   10     | . TOKEN_TYPE_CHAR
   11     | . TOKEN_TYPE_STRING
   12     | . TOKEN_ARRAY TOKEN_LSQB TOKEN_RSQB type
   13     | . TOKEN_VOID
   14     | . TOKEN_FUNC type TOKEN_LPAREN funcarg TOKEN_RPAREN
   14     | TOKEN_FUNC . type TOKEN_LPAREN funcarg TOKEN_RPAREN

    TOKEN_BOOL         shift, and go to state 9
    TOKEN_INTEGER      shift, and go to state 10
    TOKEN_TYPE_CHAR    shift, and go to state 11
    TOKEN_TYPE_STRING  shift, and go to state 12
    TOKEN_ARRAY        shift, and go to state 13
    TOKEN_VOID         shift, and go to state 14
    TOKEN_FUNC         shift, and go to state 15

    type  go to state 18


State 16

    4 decl: name TOKEN_COLON type . TOKEN_SEMI
    5     | name TOKEN_COLON type . TOKEN_ASSIGN expr TOKEN_SEMI
    6     | name TOKEN_COLON type . TOKEN_ASSIGN stmt_suite

    TOKEN_SEMI    shift, and go to state 19
    TOKEN_ASSIGN  shift, and go to state 20


State 17

   12 type: TOKEN_ARRAY TOKEN_LSQB . TOKEN_RSQB type

    TOKEN_RSQB  shift, and go to state 21


State 18

   14 type: TOKEN_FUNC type . TOKEN_LPAREN funcarg TOKEN_RPAREN

    TOKEN_LPAREN  shift, and go to state 22


State 19

    4 decl: name TOKEN_COLON type TOKEN_SEMI .

    $default  reduce using rule 4 (decl)


State 20

    5 decl: name TOKEN_COLON type TOKEN_ASSIGN . expr TOKEN_SEMI
    6     | name TOKEN_COLON type TOKEN_ASSIGN . stmt_suite
   18 stmt_suite: . TOKEN_LBRACE simple_stmt TOKEN_RBRACE
   28 expr: . expr_or
   29     | . expr_trailer TOKEN_ASSIGN expr_or
   30 expr_or: . expr_and
   31        | . expr_or TOKEN_OR expr_and
   32 expr_and: . expr_comp
   33         | . expr_and TOKEN_AND expr_comp
   34 expr_comp: . expr_arith
   35          | . expr_comp TOKEN_LESS expr_arith
   36          | . expr_comp TOKEN_LESSEQU expr_arith
   37          | . expr_comp TOKEN_GREATEREQU expr_arith
   38          | . expr_comp TOKEN_GREATER expr_arith
   39          | . expr_comp TOKEN_EQUAL expr_arith
   40          | . expr_comp TOKEN_NOTEQUAL expr_arith
   41 expr_arith: . expr_factor
   42           | . expr_arith TOKEN_ADD expr_factor
   43           | . expr_arith TOKEN_MINUS expr_factor
   44 expr_factor: . expr_expon
   45            | . expr_factor TOKEN_MUL expr_expon
   46            | . expr_factor TOKEN_DIV expr_expon
   47            | . expr_factor TOKEN_MOD expr_expon
   48 expr_expon: . expr_unary
   49           | . expr_expon TOKEN_EXPON expr_unary
   50 expr_unary: . expr_incdec
   51           | . TOKEN_BANG expr_incdec
   52           | . TOKEN_MINUS expr_incdec
   53 expr_incdec: . expr_trailer
   54            | . TOKEN_INC expr_trailer
   55            | . TOKEN_DEC expr_trailer
   56 expr_trailer: . expr_atom
   57             | . TOKEN_LPAREN expr TOKEN_RPAREN
   58             | . expr_name TOKEN_LSQB expr_number TOKEN_RSQB
   59             | . expr_name TOKEN_LPAREN expr_callarg TOKEN_RPAREN
   63 expr_atom: . expr_name
   64          | . expr_number
   65          | . TOKEN_STRING
   66          | . TOKEN_CHAR
   67          | . TOKEN_BOOL_TRUE
   68          | . TOKEN_BOOL_FALSE
   69 expr_name: . TOKEN_NAME
   70 expr_number: . TOKEN_NUMBER

    TOKEN_BOOL_TRUE   shift, and go to state 23
    TOKEN_BOOL_FALSE  shift, and go to state 24
    TOKEN_LPAREN      shift, and go to state 25
    TOKEN_LBRACE      shift, and go to state 26
    TOKEN_MINUS       shift, and go to state 27
    TOKEN_BANG        shift, and go to state 28
    TOKEN_INC         shift, and go to state 29
    TOKEN_DEC         shift, and go to state 30
    TOKEN_NUMBER      shift, and go to state 31
    TOKEN_STRING      shift, and go to state 32
    TOKEN_NAME        shift, and go to state 33
    TOKEN_CHAR        shift, and go to state 34

    stmt_suite    go to state 35
    expr          go to state 36
    expr_or       go to state 37
    expr_and      go to state 38
    expr_comp     go to state 39
    expr_arith    go to state 40
    expr_factor   go to state 41
    expr_expon    go to state 42
    expr_unary    go to state 43
    expr_incdec   go to state 44
    expr_trailer  go to state 45
    expr_atom     go to state 46
    expr_name     go to state 47
    expr_number   go to state 48


State 21

    8 type: . TOKEN_BOOL
    9     | . TOKEN_INTEGER
   10     | . TOKEN_TYPE_CHAR
   11     | . TOKEN_TYPE_STRING
   12     | . TOKEN_ARRAY TOKEN_LSQB TOKEN_RSQB type
   12     | TOKEN_ARRAY TOKEN_LSQB TOKEN_RSQB . type
   13     | . TOKEN_VOID
   14     | . TOKEN_FUNC type TOKEN_LPAREN funcarg TOKEN_RPAREN

    TOKEN_BOOL         shift, and go to state 9
    TOKEN_INTEGER      shift, and go to state 10
    TOKEN_TYPE_CHAR    shift, and go to state 11
    TOKEN_TYPE_STRING  shift, and go to state 12
    TOKEN_ARRAY        shift, and go to state 13
    TOKEN_VOID         shift, and go to state 14
    TOKEN_FUNC         shift, and go to state 15

    type  go to state 49


State 22

    7 name: . TOKEN_NAME
   14 type: TOKEN_FUNC type TOKEN_LPAREN . funcarg TOKEN_RPAREN
   15 funcarg: . %empty  [TOKEN_RPAREN]
   16        | . name TOKEN_COLON type
   17        | . name TOKEN_COLON type TOKEN_COMMA funcarg

    TOKEN_NAME  shift, and go to state 1

    $default  reduce using rule 15 (funcarg)

    name     go to state 50
    funcarg  go to state 51


State 23

   67 expr_atom: TOKEN_BOOL_TRUE .

    $default  reduce using rule 67 (expr_atom)


State 24

   68 expr_atom: TOKEN_BOOL_FALSE .

    $default  reduce using rule 68 (expr_atom)


State 25

   28 expr: . expr_or
   29     | . expr_trailer TOKEN_ASSIGN expr_or
   30 expr_or: . expr_and
   31        | . expr_or TOKEN_OR expr_and
   32 expr_and: . expr_comp
   33         | . expr_and TOKEN_AND expr_comp
   34 expr_comp: . expr_arith
   35          | . expr_comp TOKEN_LESS expr_arith
   36          | . expr_comp TOKEN_LESSEQU expr_arith
   37          | . expr_comp TOKEN_GREATEREQU expr_arith
   38          | . expr_comp TOKEN_GREATER expr_arith
   39          | . expr_comp TOKEN_EQUAL expr_arith
   40          | . expr_comp TOKEN_NOTEQUAL expr_arith
   41 expr_arith: . expr_factor
   42           | . expr_arith TOKEN_ADD expr_factor
   43           | . expr_arith TOKEN_MINUS expr_factor
   44 expr_factor: . expr_expon
   45            | . expr_factor TOKEN_MUL expr_expon
   46            | . expr_factor TOKEN_DIV expr_expon
   47            | . expr_factor TOKEN_MOD expr_expon
   48 expr_expon: . expr_unary
   49           | . expr_expon TOKEN_EXPON expr_unary
   50 expr_unary: . expr_incdec
   51           | . TOKEN_BANG expr_incdec
   52           | . TOKEN_MINUS expr_incdec
   53 expr_incdec: . expr_trailer
   54            | . TOKEN_INC expr_trailer
   55            | . TOKEN_DEC expr_trailer
   56 expr_trailer: . expr_atom
   57             | . TOKEN_LPAREN expr TOKEN_RPAREN
   57             | TOKEN_LPAREN . expr TOKEN_RPAREN
   58             | . expr_name TOKEN_LSQB expr_number TOKEN_RSQB
   59             | . expr_name TOKEN_LPAREN expr_callarg TOKEN_RPAREN
   63 expr_atom: . expr_name
   64          | . expr_number
   65          | . TOKEN_STRING
   66          | . TOKEN_CHAR
   67          | . TOKEN_BOOL_TRUE
   68          | . TOKEN_BOOL_FALSE
   69 expr_name: . TOKEN_NAME
   70 expr_number: . TOKEN_NUMBER

    TOKEN_BOOL_TRUE   shift, and go to state 23
    TOKEN_BOOL_FALSE  shift, and go to state 24
    TOKEN_LPAREN      shift, and go to state 25
    TOKEN_MINUS       shift, and go to state 27
    TOKEN_BANG        shift, and go to state 28
    TOKEN_INC         shift, and go to state 29
    TOKEN_DEC         shift, and go to state 30
    TOKEN_NUMBER      shift, and go to state 31
    TOKEN_STRING      shift, and go to state 32
    TOKEN_NAME        shift, and go to state 33
    TOKEN_CHAR        shift, and go to state 34

    expr          go to state 52
    expr_or       go to state 37
    expr_and      go to state 38
    expr_comp     go to state 39
    expr_arith    go to state 40
    expr_factor   go to state 41
    expr_expon    go to state 42
    expr_unary    go to state 43
    expr_incdec   go to state 44
    expr_trailer  go to state 45
    expr_atom     go to state 46
    expr_name     go to state 47
    expr_number   go to state 48


State 26

    4 decl: . name TOKEN_COLON type TOKEN_SEMI
    5     | . name TOKEN_COLON type TOKEN_ASSIGN expr TOKEN_SEMI
    6     | . name TOKEN_COLON type TOKEN_ASSIGN stmt_suite
    7 name: . TOKEN_NAME
   18 stmt_suite: TOKEN_LBRACE . simple_stmt TOKEN_RBRACE
   19 simple_stmt: . small_stmt
   20            | . small_stmt simple_stmt
   21 small_stmt: . TOKEN_RETURN expr TOKEN_SEMI
   22           | . TOKEN_PRINT expr TOKEN_COMMA expr TOKEN_SEMI
   23           | . TOKEN_IF TOKEN_LPAREN expr TOKEN_RPAREN stmt_suite
   24           | . TOKEN_IF TOKEN_LPAREN expr TOKEN_RPAREN stmt_suite TOKEN_ELSE stmt_suite
   25           | . TOKEN_FOR TOKEN_LPAREN expr TOKEN_SEMI expr TOKEN_SEMI expr TOKEN_RPAREN stmt_suite
   26           | . decl
   27           | . expr TOKEN_SEMI
   28 expr: . expr_or
   29     | . expr_trailer TOKEN_ASSIGN expr_or
   30 expr_or: . expr_and
   31        | . expr_or TOKEN_OR expr_and
   32 expr_and: . expr_comp
   33         | . expr_and TOKEN_AND expr_comp
   34 expr_comp: . expr_arith
   35          | . expr_comp TOKEN_LESS expr_arith
   36          | . expr_comp TOKEN_LESSEQU expr_arith
   37          | . expr_comp TOKEN_GREATEREQU expr_arith
   38          | . expr_comp TOKEN_GREATER expr_arith
   39          | . expr_comp TOKEN_EQUAL expr_arith
   40          | . expr_comp TOKEN_NOTEQUAL expr_arith
   41 expr_arith: . expr_factor
   42           | . expr_arith TOKEN_ADD expr_factor
   43           | . expr_arith TOKEN_MINUS expr_factor
   44 expr_factor: . expr_expon
   45            | . expr_factor TOKEN_MUL expr_expon
   46            | . expr_factor TOKEN_DIV expr_expon
   47            | . expr_factor TOKEN_MOD expr_expon
   48 expr_expon: . expr_unary
   49           | . expr_expon TOKEN_EXPON expr_unary
   50 expr_unary: . expr_incdec
   51           | . TOKEN_BANG expr_incdec
   52           | . TOKEN_MINUS expr_incdec
   53 expr_incdec: . expr_trailer
   54            | . TOKEN_INC expr_trailer
   55            | . TOKEN_DEC expr_trailer
   56 expr_trailer: . expr_atom
   57             | . TOKEN_LPAREN expr TOKEN_RPAREN
   58             | . expr_name TOKEN_LSQB expr_number TOKEN_RSQB
   59             | . expr_name TOKEN_LPAREN expr_callarg TOKEN_RPAREN
   63 expr_atom: . expr_name
   64          | . expr_number
   65          | . TOKEN_STRING
   66          | . TOKEN_CHAR
   67          | . TOKEN_BOOL_TRUE
   68          | . TOKEN_BOOL_FALSE
   69 expr_name: . TOKEN_NAME
   70 expr_number: . TOKEN_NUMBER
